# azure_speech

./: README.md  pyproject.toml
examples/: official_sdk_example.py  synthesize.py  synthesize_async.py
src/azure_speech/: __init__.py  client.py  config.py
tests/: test_client.py  test_official_api.py
