 [build-system]
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "azure-speech-rest"
 version = "0.1.0"
 description = "Lightweight Azure Speech REST SDK wrapper using httpx."
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [{ name = "Azure Speech REST SDK contributors" }]
 dependencies = ["httpx>=0.27.0"]

 [project.optional-dependencies]
 dev = ["pytest>=7.0"]

 [tool.setuptools]
 package-dir = {"" = "src"}

 [tool.setuptools.packages.find]
 where = ["src"]
